--- a/index.html
+++ b/index.html
@@ -4,83 +4,136 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homework01</title>
+
+    <link rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" 
+    integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" 
+    crossorigin="anonymous" 
+    referrerpolicy="no-referrer" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" 
+    rel="stylesheet">
+
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+    <header class="page-header">
+        <nav class="header-nav">
+            <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+            
+            <ul class="nav-list">
+                <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
+                <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
             </ul>
         </nav>
 
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address class="contacts">
+            <ul class="contacts-list">
+                <li class="contacts-item"><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="contacts-item"><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
 
-    <main>
-<section>
-<h1>Effective Solutions for Your Business</h1>
-<button type="button">Order Service</button>
+    <main class="page-main">
+<section class="main-sct-one">
+    <h1 class="sct-one-text">Effective Solutions for Your Business</h1>
+    <button type="button" class="sct-one-btn">Order Service</button>
 </section>
 
-<section>
-    <h2>Benefits</h2>
-<ul>
-    <li>
-        <h3>Strategy</h3>
+<section class="main-sct-two">
+    <h2 class="sct-two-headline">Benefits</h2>
+<ul class="sct-two-list">
+    <li class="sct-two-item">
+        <h3 class="sct-two-text">Strategy</h3>
         <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
     </li>
-    <li>
-        <h3>Punctuality</h3>
+    <li class="sct-two-item" >
+        <h3 class="sct-two-text">Punctuality</h3>
         <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
     </li>
-    <li>
-        <h3>Diligence</h3>
+    <li class="sct-two-item">
+        <h3 class="sct-two-text">Diligence</h3>
         <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
     </li>
-    <li>
-        <h3>Technologies</h3>
+    <li class="sct-two-item">
+        <h3 class="sct-two-text">Technologies</h3>
         <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
     </li>
 </ul>
 </section>
 
-<section>
-    <h2>Our Team</h2>
-<ul>
-    <li>
+<section class="main-sct-three">
+    <h2 class="sct-three-headline">Our Team</h2>
+<ul class="sct-three-list">
+    <li class="sct-three-item">
         <img src="./images/img-3.jpg" width="264" height="260" alt="Mark Guerrero Product Designer" />
-        <h3>Mark Guerrero</h3>
+        <h3 class="sct-three-text">Mark Guerrero</h3>
         <p>Product Designer</p>
     </li>
-    <li>
+    <li class="sct-three-item">
         <img src="./images/img-2.jpg" width="264" height="260" alt="Tom Ford Frontend Developer" />
-        <h3>Tom Ford</h3>
+        <h3 class="sct-three-text">Tom Ford</h3>
         <p>Frontend Developer</p>
     </li>
-    <li>
+    <li class="sct-three-item">
         <img src="./images/img-1.jpg" width="264" height="260" alt="Camila Garcia Marketing" />
-        <h3>Camila Garcia</h3>
+        <h3 class="sct-three-text">Camila Garcia</h3>
         <p>Marketing</p>
     </li>
-    <li>
+    <li class="sct-three-item" >
         <img src="./images/img.jpg" width="264" height="260" alt="Daniel Wilson UI Designer" />
-        <h3>Daniel Wilson</h3>
+        <h3 class="sct-three-text">Daniel Wilson</h3>
         <p>UI Designer</p>
     </li>
 </ul>
 </section>
+
+<section class="main-sct-four">
+    <h2 class="sct-four-headline">Our Portfolio</h2>
+    <ul class="sct-four-list">
+        <li class="sct-four-item">
+            <img src="./images/img-4.jpg" width="360" height="300"  alt="Banking App" />
+            <h3 class="sct-four-text">Banking App</h3>
+            <p>App</p>
+        </li>
+        <li class="sct-four-item">
+            <img src="./images/img-5.jpg" width="360" height="300"  alt="Cashless Payment" />
+            <h3 class="sct-four-text">Cashless Payment</h3>
+            <p>Marketing</p>
+        </li>
+        <li class="sct-four-item" >
+            <img src="./images/img-6.jpg" width="360" height="300"  alt="Meditation App" />
+            <h3 class="sct-four-text">Meditation App</h3>
+            <p>App</p>
+        </li>
+    </ul>
+       
+    <ul class="sct-four-list">
+        <li class="sct-four-item">
+            <img src="./images/img-7.jpg" width="360" height="300"  alt="Taxi Service" />
+            <h3 class="sct-four-text">Taxi Service</h3>
+            <p>Marketing</p>
+        </li>
+        <li class="sct-four-item">
+            <img src="./images/img-8.jpg" width="360" height="300"  alt="Screen Illustrations" />
+            <h3 class="sct-four-text">Screen Illustrations</h3>
+            <p>Design</p>
+        </li>
+        <li class="sct-four-item">
+            <img src="./images/img-9.jpg" width="360" height="300"  alt="Online Courses" />
+            <h3 class="sct-four-text">Online Courses</h3>
+            <p>Marketing</p>
+        </li>
+    </ul>
+</section>
     </main>
 
-    <footer>
-        <a href="./index.html">WebStudio</a>
+    <footer class="page-footer">
+        <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.  
         </p>
