--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     crossorigin="anonymous" 
     referrerpolicy="no-referrer" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" 
-    rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link 
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" 
+        rel="stylesheet">
 
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
     <header class="page-header">
@@ -49,19 +50,19 @@
 <ul class="sct-two-list">
     <li class="sct-two-item">
         <h3 class="sct-two-text">Strategy</h3>
-        <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+        <p class="sct-two-p">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
     </li>
     <li class="sct-two-item" >
         <h3 class="sct-two-text">Punctuality</h3>
-        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+        <p class="sct-two-p">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
     </li>
     <li class="sct-two-item">
         <h3 class="sct-two-text">Diligence</h3>
-        <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+        <p class="sct-two-p">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
     </li>
     <li class="sct-two-item">
         <h3 class="sct-two-text">Technologies</h3>
-        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+        <p class="sct-two-p">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
     </li>
 </ul>
 </section>
@@ -72,22 +73,22 @@
     <li class="sct-three-item">
         <img src="./images/img-3.jpg" width="264" height="260" alt="Mark Guerrero Product Designer" />
         <h3 class="sct-three-text">Mark Guerrero</h3>
-        <p>Product Designer</p>
+        <p class="sct-three-p">Product Designer</p>
     </li>
     <li class="sct-three-item">
         <img src="./images/img-2.jpg" width="264" height="260" alt="Tom Ford Frontend Developer" />
         <h3 class="sct-three-text">Tom Ford</h3>
-        <p>Frontend Developer</p>
+        <p class="sct-three-p">Frontend Developer</p>
     </li>
     <li class="sct-three-item">
         <img src="./images/img-1.jpg" width="264" height="260" alt="Camila Garcia Marketing" />
         <h3 class="sct-three-text">Camila Garcia</h3>
-        <p>Marketing</p>
+        <p class="sct-three-p">Marketing</p>
     </li>
     <li class="sct-three-item" >
         <img src="./images/img.jpg" width="264" height="260" alt="Daniel Wilson UI Designer" />
         <h3 class="sct-three-text">Daniel Wilson</h3>
-        <p>UI Designer</p>
+        <p class="sct-three-p">UI Designer</p>
     </li>
 </ul>
 </section>
@@ -98,35 +99,32 @@
         <li class="sct-four-item">
             <img src="./images/img-4.jpg" width="360" height="300"  alt="Banking App" />
             <h3 class="sct-four-text">Banking App</h3>
-            <p>App</p>
+            <p class="sct-four-p">App</p>
         </li>
         <li class="sct-four-item">
             <img src="./images/img-5.jpg" width="360" height="300"  alt="Cashless Payment" />
             <h3 class="sct-four-text">Cashless Payment</h3>
-            <p>Marketing</p>
+            <p class="sct-four-p">Marketing</p>
         </li>
         <li class="sct-four-item" >
             <img src="./images/img-6.jpg" width="360" height="300"  alt="Meditation App" />
             <h3 class="sct-four-text">Meditation App</h3>
-            <p>App</p>
+            <p class="sct-four-p">App</p>
         </li>
-    </ul>
-       
-    <ul class="sct-four-list">
         <li class="sct-four-item">
             <img src="./images/img-7.jpg" width="360" height="300"  alt="Taxi Service" />
             <h3 class="sct-four-text">Taxi Service</h3>
-            <p>Marketing</p>
+            <p class="sct-four-p">Marketing</p>
         </li>
         <li class="sct-four-item">
             <img src="./images/img-8.jpg" width="360" height="300"  alt="Screen Illustrations" />
             <h3 class="sct-four-text">Screen Illustrations</h3>
-            <p>Design</p>
+            <p class="sct-four-p">Design</p>
         </li>
         <li class="sct-four-item">
             <img src="./images/img-9.jpg" width="360" height="300"  alt="Online Courses" />
             <h3 class="sct-four-text">Online Courses</h3>
-            <p>Marketing</p>
+            <p class="sct-four-p">Marketing</p>
         </li>
     </ul>
 </section>
@@ -134,7 +132,7 @@
 
     <footer class="page-footer">
         <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
-        <p>
+        <p class="footer-p">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.  
         </p>
     </footer>
